--- a/package.json
+++ b/package.json
@@ -23,20 +23,23 @@
   },
   "packageManager": "yarn@3.2.0",
   "devDependencies": {
-    "@babel/core": "^7.17.5",
-    "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@babel/preset-env": "^7.16.11",
+    "@babel/core": "^7.19.1",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.19.1",
     "@flarum/prettier-config": "^1.0.0",
-    "@types/jest": "^27.4.1",
-    "babel-loader": "^8.2.3",
-    "jest": "^27.5.1",
-    "prettier": "^2.5.1",
+    "@types/jest": "^29.0.3",
+    "babel-loader": "^8.2.5",
+    "jest": "^29.0.3",
+    "prettier": "^2.7.1",
     "shx": "^0.3.4",
-    "ts-jest": "^27.1.3",
-    "ts-loader": "^9.2.8",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.2",
+    "ts-jest": "^29.0.1",
+    "ts-loader": "^9.4.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.3",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "shallow-equal": "^1.2.1"
   }
 }
